# scitex-web

./: .env.example  .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  codecov.yml  pyproject.toml
.github/workflows/: cla.yml  docs.yml  import-smoke-on-ubuntu-py3-12.yml  pr-ci.yml  publish-pypi.yml  pypi-publish-and-github-release-on-tag.yml  pytest-matrix-on-ubuntu-py3-11-3-12-3-13.yml  release-ci.yml  rtd-sphinx-build-on-ubuntu-latest.yml  scitex-web-quality-audit-on-ubuntu-latest.yml  test.yml
.scitex/dev/: config.yaml
docs/sphinx/: api.rst  conf.py  index.rst
examples/: quickstart.py
src/scitex_web/: __init__.py  _scraping.py  _search_pubmed.py  _summarize_url.py  download_images.py
src/scitex_web/_skills/scitex-web/: 01_installation.md  02_quick-start.md  03_python-api.md  20_env-vars.md  SKILL.md
src/scitex_web/_sphinx_html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/scitex_web/_sphinx_html/.doctrees/: api.doctree  index.doctree
src/scitex_web/_sphinx_html/.doctrees/api/: scitex_web.doctree  scitex_web.download_images.doctree
src/scitex_web/_sphinx_html/_modules/: index.html
src/scitex_web/_sphinx_html/_modules/scitex_web/: _scraping.html  _search_pubmed.html  _summarize_url.html  download_images.html
src/scitex_web/_sphinx_html/_sources/api/: scitex_web.download_images.rst.txt  scitex_web.rst.txt
src/scitex_web/_sphinx_html/api/: scitex_web.download_images.html  scitex_web.html
tests/: conftest.py  test_examples.py
tests/develop/: test_audit.py
tests/examples/: test_quickstart.py
tests/integration/: test_cross_package_imports.py  test_examples.py
tests/scitex_web/: test__scraping.py  test__search_pubmed.py  test__summarize_url.py  test_download_images.py
