[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scitex-web"
version = "0.1.4"
description = "Web scraping (URLs, images), PubMed search, URL summarization helpers — standalone module from the SciTeX ecosystem"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.9"
authors = [{name = "Yusuke Watanabe", email = "ywatanabe@scitex.ai"}]
keywords = ["scitex", "web", "scraping", "pubmed", "url-summarize"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "beautifulsoup4",
    "requests",
    "aiohttp",
    "beautifulsoup4>=4.12.0",
    "tqdm",
]

[project.optional-dependencies]
readability = [
    "readability-lxml",
]
summarize = []
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]
all = [
    "scitex-web[readability]",
    "scitex-web[summarize]",
]

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-web"
Repository = "https://github.com/ywatanabe1989/scitex-web"
Documentation = "https://scitex-web.readthedocs.io"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scitex_web = ["_skills/**/*.md"]

[project.entry-points."scitex_dev.skills"]
scitex-web = "scitex_web"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--disable-warnings"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.scitex-linter]
library_dirs = ["src", "tests", "examples", "apps", "config", "docs"]
